base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  http
