base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`foo.codegameeat.com`)
    kind: Rule
    services:
    - name: service
      port: http
  tls:
    certResolver: le
